Update to Spring Boot 2.6.1